# webserver-template

./: .env  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  README_zh.md  TODO.md  标准化迁移改造文档.md  迁移任务清单.md
.claude/: settings.local.json
.cursor/rules/: database-patterns.mdc  error-handling.mdc  project-structure.mdc  rust-coding-standards.mdc  salvo-framework.mdc  salvo-service-container.mdc  testing-guidelines.mdc
backup/: Cargo.toml  config.rs
benches/: performance_tests.rs
config/: default.toml
docs/: SERVICE_CONTAINER.md  SERVICE_REGISTRY.md  标准化迁移改造文档.md  第三阶段完成总结.md  第二阶段完成总结.md  第四阶段开始文档.md  迁移任务清单.md
logs/: app.log.2025-08-09
migrations/: 001_create_users_table.sql
scripts/: load_test.sh  performance_monitor.sh
src/: main.rs
src/app/: container.rs  container_lazy.rs  depot_keys.rs  error.rs  lib.rs  logging.rs  mod.rs  state.rs
src/app/api/: docs.rs  extractors.rs  mod.rs  response.rs  routes.rs  util.rs
src/app/api/handlers/: auth_handler.rs  mod.rs  user_handler.rs
src/app/api/middleware/: auth.rs  global_exception_handler.rs  mod.rs  rate_limiter.rs  request_id.rs  request_logger.rs
src/app/api/telemetry/: mod.rs  request_id_format.rs
src/app/config/: db_config.rs  log_config.rs  mod.rs
src/app/domain/: mod.rs
src/app/domain/models/: mod.rs  user.rs
src/app/domain/services/: auth_service.rs  mod.rs  user_service.rs
src/app/hoops/: cors.rs  jwt.rs  mod.rs
src/app/infrastructure/: mod.rs  pagination.rs
src/app/infrastructure/persistence/: README.md  mod.rs  user_repository.rs
src/app/infrastructure/persistence/users/: mod.rs  repository.rs  user_mapper.html  xml_repository.rs
src/app/modules/: mod.rs
src/app/modules/auth/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
src/app/modules/health/: handlers.rs  mod.rs
src/app/modules/users/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
