[package]
name = "webserver-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace", "request-id", "cors"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
async-trait = "0.1.88"
config = "0.15.13"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "uuid",
  "time",
  "chrono",
] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
redis = { version = "0.32.4", features = ["tokio-comp"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = "0.5.3"
