[package]
name = "webserver-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
salvo = { version = "0.72", features = [
  "cors",
  "oapi",
  "compression",
  "request-id",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
# tower-http replaced by salvo's built-in features
dotenvy = "0.15.7"
anyhow = "1.0.98"
async-trait = "0.1.88"
# config = "0.15.13"  # 被 Figment 替代
figment = { version = "0.10.8", features = ["env", "toml"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "uuid",
  "time",
  "chrono",
] }
# tower replaced by salvo's built-in features
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
redis = { version = "0.32.4", features = ["tokio-comp"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.37"

# API Documentation dependencies (built into Salvo)
# utoipa replaced by salvo's built-in OpenAPI support
argon2 = "0.5.3"
